.env.sample updated

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,4 +1,12 @@
 PORT=3000
 NODE_ENV=development
 DEV_ORIGIN=*
-PROD_ORIGIN=https://mysite.com
+PROD_ORIGIN=*
+PASSWORD_SALT=ot
+SECRET_API_KEY=b6ae1487d5f9qw1c2a
+
+DATABASE_HOST=localhost
+DATABASE_USER=root
+DATABASE_PASSWORD=
+DATABASE_NAME=sebastianviajes
+DATABASE_PORT=3306
