--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,9 +1,9 @@
-PORT=3000
+PORT=3024
 NODE_ENV=development
 DEV_ORIGIN=*
 PROD_ORIGIN=*
 PASSWORD_SALT=ot
-SECRET_API_KEY=b6ae1487d5f9qw1c2a
+SECRET_API_KEY=123
 
 DATABASE_HOST=localhost
 DATABASE_USER=root
