--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "fs": "^0.0.1-security",
     "helmet": "^7.0.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
