--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -6,6 +6,8 @@ PASSWORD_SALT=ot
 SECRET_API_KEY=123
 
 DATABASE_HOST=localhost
+DATABASE_DIALECT=mariadb
+#DATABASE_DIALECT=mysql
 DATABASE_USER=root
 DATABASE_PASSWORD=
 DATABASE_NAME=sebastianviajes
