chore: update version

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,12 +1,20 @@
-PORT=3024
+PORT=3000
 NODE_ENV=development
 DEV_ORIGIN=*
-PROD_ORIGIN=*
+PROD_ORIGIN=https://mysite.com
 PASSWORD_SALT=ot
-SECRET_API_KEY=123
+SECRET_API_KEY=b6ae1487d5f9121c7b
 
 DATABASE_HOST=localhost
+DATABASE_DIALECT=mariadb
+#DATABASE_DIALECT=mysql
 DATABASE_USER=root
 DATABASE_PASSWORD=
 DATABASE_NAME=sebastianviajes
 DATABASE_PORT=3306
+
+EMAIL_SMTP_HOST=smtp.gmail.com
+EMAIL_SMTP_PORT=587
+EMAIL_SMTP_USER=@gmail.com
+EMAIL_SMTP_PASSWORD=
+EMAIL_SMTP_FROM=Sistema de pasajes <@gmail.com>
